Updated Selenium version and Fixed some problems in PageObjects

--- a/resources/settings.properties
+++ b/resources/settings.properties
@@ -1,15 +1,15 @@
-application=file:///Users/eduardo.heinen/workspace/html/animal-best-friend-forever/
+application=file:///Users/eheinen/Workspace/html/AnimalBestFriendForever/
 
-browser=CHROME
+#browser=CHROME
 #browser=FIREFOX
 #browser=IE
 #browser=EDGE
 #browser=OPERA
-#browser=SAFARI
+#browser=SAFARI -> You need to download the Safari Browser Extension 
 
 #webdriver.chrome.driver=
 
 report_path=test
 report_format=json
 
-screenshot_path_fail=/Users/eduardo.heinen/Workspace/java/abff-automation/screenshots/fail/
+screenshot_path_fail=/Users/eheinen/Workspace/java/abff-automation/screenshots/fail/
